Update Maven compiler plugin to Java 26 and adjust JVM export options.
This is to test JDK 26 valhalla