@@ -67,8 +67,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.0</version>
                 <configuration>
-                    <source>25</source>
-                    <target>25</target>
+                    <source>26</source>
+                    <target>26</target>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                         <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
@@ -93,7 +93,10 @@
                     <mainClass>ca.bazlur.mandelbrot/ca.bazlur.mandelbrot.MandelbrotApplication</mainClass>
                     <options>
                         <option>--enable-preview</option>
-<!--                        <option>-XX:StartFlightRecording=filename=value.jfr,duration=60s,settings=profile</option>-->
+                        <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.base/jdk.internal.value=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+                        <option>-XX:StartFlightRecording=filename=value.jfr,duration=60s,settings=profile</option>
                     </options>
                 </configuration>
             </plugin>
